--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </a>
 <p>To install this project .</p>
 <p>clone it (adapt to your needs)</p>
-<pre><code><span class="hl-0">git</span><span class="hl-1"> </span><span class="hl-0">clone</span><span class="hl-1"> </span><span class="hl-0">git</span><span class="hl-1">@</span><span class="hl-0">github</span><span class="hl-1">.</span><span class="hl-0">com</span><span class="hl-1">:</span><span class="hl-0">thib3113</span><span class="hl-1">/</span><span class="hl-0">chat</span><span class="hl-1">.</span><span class="hl-0">git</span><br/><span class="hl-0">cd</span><span class="hl-1"> </span><span class="hl-0">chat</span>
+<pre><code><span class="hl-0">git</span><span class="hl-1"> </span><span class="hl-0">clone</span><span class="hl-1"> </span><span class="hl-0">git</span><span class="hl-1">@</span><span class="hl-0">github</span><span class="hl-1">.</span><span class="hl-0">com</span><span class="hl-1">:</span><span class="hl-0">thib3113</span><span class="hl-1">/</span><span class="hl-0">chat</span><span class="hl-1">.</span><span class="hl-0">git</span><span class="hl-1">  </span><br/><span class="hl-0">cd</span><span class="hl-1"> </span><span class="hl-0">chat</span><span class="hl-1">  </span>
 </code></pre>
 <p>Install and build client / server :</p>
-<pre><code><span class="hl-0">npm</span><span class="hl-1"> </span><span class="hl-0">install</span><br/><span class="hl-0">npm</span><span class="hl-1"> </span><span class="hl-0">run</span><span class="hl-1"> </span><span class="hl-0">build</span>
+<pre><code><span class="hl-0">npm</span><span class="hl-1"> </span><span class="hl-0">install</span><span class="hl-1">  </span><br/><span class="hl-0">npm</span><span class="hl-1"> </span><span class="hl-0">run</span><span class="hl-1"> </span><span class="hl-0">build</span><span class="hl-1">  </span>
 </code></pre>
 
 <a href="#start" id="start" style="color: inherit; text-decoration: none;">
   <h3>Start</h3>
 </a>
 <p>to start the server you just need to call (on the project root folder)</p>
-<pre><code><span class="hl-0">npm</span><span class="hl-1"> </span><span class="hl-0">run</span><span class="hl-1"> </span><span class="hl-2">start</span><span class="hl-1">:</span><span class="hl-0">server</span>
+<pre><code><span class="hl-0">npm</span><span class="hl-1"> </span><span class="hl-0">run</span><span class="hl-1"> </span><span class="hl-2">start</span><span class="hl-1">:</span><span class="hl-0">server</span><span class="hl-1">  </span>
 </code></pre>
 <p>to start a client you just need to call (on the project root folder)</p>
-<pre><code><span class="hl-0">npm</span><span class="hl-1"> </span><span class="hl-0">run</span><span class="hl-1"> </span><span class="hl-2">start</span><span class="hl-1">:</span><span class="hl-0">client</span>
+<pre><code><span class="hl-0">npm</span><span class="hl-1"> </span><span class="hl-0">run</span><span class="hl-1"> </span><span class="hl-2">start</span><span class="hl-1">:</span><span class="hl-0">client</span><span class="hl-1">  </span>
 </code></pre>
 <p>you cal also use <code>npm start</code> in the folders <code>server</code> or <code>client</code> .</p>
 
@@ -30,4 +30,98 @@
 </a>
 <p>The technical documentation is available here : <a href="https://thib3113.github.io/chat/modules.html">https://thib3113.github.io/chat/modules.html</a></p>
 <p>The use documentation is available here : <a href="https://github.com/thib3113/chat/wiki/Documentation">https://github.com/thib3113/chat/wiki/Documentation</a></p>
+
+<a href="#api" id="api" style="color: inherit; text-decoration: none;">
+  <h3>API</h3>
+</a>
+<p>The only API avalaible is used to get metrics (on the port logged by the server on start) :</p>
+<pre><code><span class="hl-3">GET</span><span class="hl-1"> /</span><span class="hl-0">metrics</span>
+</code></pre>
+<p>will return :</p>
+<pre><code class="language-json"><span class="hl-1">{</span><br/><span class="hl-1">    </span><span class="hl-4">&quot;uptime&quot;</span><span class="hl-1">: </span><span class="hl-5">&quot;00:08:34&quot;</span><span class="hl-1">,</span><br/><span class="hl-1">    </span><span class="hl-4">&quot;totalMessages&quot;</span><span class="hl-1">: </span><span class="hl-6">2509</span><span class="hl-1">,</span><br/><span class="hl-1">    </span><span class="hl-4">&quot;mostUsedWords&quot;</span><span class="hl-1">: [</span><br/><span class="hl-1">        {</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;word&quot;</span><span class="hl-1">: </span><span class="hl-5">&quot;the&quot;</span><span class="hl-1">,</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;uses&quot;</span><span class="hl-1">: </span><span class="hl-6">110</span><br/><span class="hl-1">        }</span><br/><span class="hl-1">    ],</span><br/><span class="hl-1">    </span><span class="hl-4">&quot;messagesStats&quot;</span><span class="hl-1">: {</span><br/><span class="hl-1">        </span><span class="hl-4">&quot;fiveMinutes&quot;</span><span class="hl-1">: {</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;number&quot;</span><span class="hl-1">: </span><span class="hl-6">1466</span><span class="hl-1">,</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;avgSize&quot;</span><span class="hl-1">: </span><span class="hl-6">5.078444747612552</span><br/><span class="hl-1">        },</span><br/><span class="hl-1">        </span><span class="hl-4">&quot;thirtyMinutes&quot;</span><span class="hl-1">: {</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;number&quot;</span><span class="hl-1">: </span><span class="hl-6">2509</span><span class="hl-1">,</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;avgSize&quot;</span><span class="hl-1">: </span><span class="hl-6">5.061777600637704</span><br/><span class="hl-1">        },</span><br/><span class="hl-1">        </span><span class="hl-4">&quot;oneHour&quot;</span><span class="hl-1">: {</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;number&quot;</span><span class="hl-1">: </span><span class="hl-6">2509</span><span class="hl-1">,</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;avgSize&quot;</span><span class="hl-1">: </span><span class="hl-6">5.061777600637704</span><br/><span class="hl-1">        }</span><br/><span class="hl-1">    },</span><br/><span class="hl-1">    </span><span class="hl-4">&quot;users&quot;</span><span class="hl-1">: [</span><br/><span class="hl-1">        {</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;nickName&quot;</span><span class="hl-1">: </span><span class="hl-5">&quot;test&quot;</span><span class="hl-1">,</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;messagesInLastHour&quot;</span><span class="hl-1">: </span><span class="hl-6">6729</span><span class="hl-1">,</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;pingAvg&quot;</span><span class="hl-1">: </span><span class="hl-6">1.5098039215686274</span><span class="hl-1">,</span><br/><span class="hl-1">            </span><span class="hl-4">&quot;uptime&quot;</span><span class="hl-1">: </span><span class="hl-5">&quot;00:08:32&quot;</span><br/><span class="hl-1">        }</span><br/><span class="hl-1">    ]</span><br/><span class="hl-1">}</span><br/>
+</code></pre>
+<table>
+<thead>
+<tr>
+<th>Key</th>
+<th>Data Type</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody><tr>
+<td>uptime</td>
+<td>string formated</td>
+<td>the uptime of the server</td>
+</tr>
+<tr>
+<td>totalMessages</td>
+<td>number</td>
+<td>the number of messages from the start of the server</td>
+</tr>
+<tr>
+<td>mostUsedWords</td>
+<td>Array&lt;object&gt;</td>
+<td>the ten most used words, with the number of uses</td>
+</tr>
+<tr>
+<td>mostUsedWords.word</td>
+<td>string</td>
+<td>the word</td>
+</tr>
+<tr>
+<td>mostUsedWords.uses</td>
+<td>number</td>
+<td>the number of uses</td>
+</tr>
+<tr>
+<td>messagesStats</td>
+<td>Record&lt;string, object&gt;</td>
+<td>some messages stats for the last 5/30/60 minutes</td>
+</tr>
+<tr>
+<td>messagesStats.fiveMinutes</td>
+<td>object</td>
+<td>the last five minutes stats</td>
+</tr>
+<tr>
+<td>messagesStats.thirtyMinutes</td>
+<td>object</td>
+<td>the last thirty minutes stats</td>
+</tr>
+<tr>
+<td>messagesStats.oneHour</td>
+<td>object</td>
+<td>the last one hour (60 minutes) stats</td>
+</tr>
+<tr>
+<td>messagesStats.&lt;duration&gt;.number</td>
+<td>number</td>
+<td>number of messages in this duration</td>
+</tr>
+<tr>
+<td>messagesStats.&lt;duration&gt;.avgSize</td>
+<td>number</td>
+<td>the average size of each messages</td>
+</tr>
+<tr>
+<td>users</td>
+<td>Array&lt;object&gt;</td>
+<td>list of connected users with some stats</td>
+</tr>
+<tr>
+<td>users.nickName</td>
+<td>string</td>
+<td>the uniq nickName of this user</td>
+</tr>
+<tr>
+<td>users.pingAvg</td>
+<td>number</td>
+<td>the average of ping timer for this user</td>
+</tr>
+<tr>
+<td>users.uptime</td>
+<td>string formated</td>
+<td>the uptime for this user</td>
+</tr>
+</tbody></table>
 </div></div><div class="col-4 col-menu menu-sticky-wrap menu-highlight"><nav class="tsd-navigation primary"><ul><li class="current"><a href="modules.html">Modules</a></li><li class=" tsd-kind-module"><a href="modules/client_src.html">client/src</a></li><li class=" tsd-kind-module"><a href="modules/server_src.html">server/src</a></li></ul></nav></div></div></div><footer class="with-border-bottom"><div class="container"><h2>Legend</h2><div class="tsd-legend-group"><ul class="tsd-legend"><li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li></ul><ul class="tsd-legend"><li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li></ul><ul class="tsd-legend"><li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li></ul><ul class="tsd-legend"><li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li></ul></div><h2>Settings</h2><p>Theme <select id="theme"><option value="os">OS</option><option value="light">Light</option><option value="dark">Dark</option></select></p></div></footer><div class="container tsd-generator"><p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div><div class="overlay"></div><script src="assets/main.js"></script></body></html>
