deploy: bb8721813b1078ba7040541156d0fce6e9b0465a

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <h3>Documentation</h3>
 </a>
 <p>The technical documentation is available here : <a href="https://thib3113.github.io/chat/modules.html">https://thib3113.github.io/chat/modules.html</a></p>
-<p>The use documentation is available here : <a href="https://github.com/thib3113/chat/wiki/Documentation">https://github.com/thib3113/chat/wiki/Documentation</a></p>
+<p>The use documentation is available here : <a href="https://github.com/thib3113/chat/wiki">https://github.com/thib3113/chat/wiki</a></p>
 
 <a href="#api" id="api" style="color: inherit; text-decoration: none;">
   <h3>API</h3>
