deploy: ee9af817fb2b2f4edc8f3a4d1ceefc56fe56a96f

--- a/index.html
+++ b/index.html
@@ -31,6 +31,24 @@
 <p>The technical documentation is available here : <a href="https://thib3113.github.io/chat/modules.html">https://thib3113.github.io/chat/modules.html</a></p>
 <p>The user documentation is available here : <a href="https://github.com/thib3113/chat/wiki">https://github.com/thib3113/chat/wiki</a></p>
 
+<a href="#configuration" id="configuration" style="color: inherit; text-decoration: none;">
+  <h3>Configuration</h3>
+</a>
+
+<a href="#server" id="server" style="color: inherit; text-decoration: none;">
+  <h4>Server</h4>
+</a>
+<p>For the server, you can configure the listening port by setting the environment variable <code>PORT</code></p>
+<pre><code class="language-dotenv">PORT=3000
+</code></pre>
+
+<a href="#client" id="client" style="color: inherit; text-decoration: none;">
+  <h4>Client</h4>
+</a>
+<p>For the client, you can configure the server location by setting the environment variable <code>CHAT_SERVER</code></p>
+<pre><code class="language-dotenv">CHAT_SERVER=http://localhost:3000
+</code></pre>
+
 <a href="#api" id="api" style="color: inherit; text-decoration: none;">
   <h3>API</h3>
 </a>
